ConEmu 210111 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=201011
-location_arc=4848957,x83CE0633,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuPack.201011.7z
-location_exe=7379040,xC722CE32,https://github.com/Maximus5/ConEmu/releases/download/v20.10.11/ConEmuSetup.201011.exe
-md5_arc=82ed465dbbd371fc12f0420ee8b5a3b8
-md5_exe=661fda7c116dc326f194e8b85786338d
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.201011.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.201011.exe?use_mirror=autoselect
+version=210111
+location_arc=4905479,x010749D7,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuPack.210111.7z
+location_exe=7433840,x7DDB6ACB,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuSetup.210111.exe
+md5_arc=eb92adfbd7d7c38f344827a3eb00d7c3
+md5_exe=104fa474c62b85ab356f0e6cc7c751a1
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210111.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210111.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210109
-location_arc=4935961,x239E67A1,https://github.com/Maximus5/ConEmu/releases/download/v21.01.09/ConEmuPack.210109.7z
-location_exe=7463536,x33DE85E3,https://github.com/Maximus5/ConEmu/releases/download/v21.01.09/ConEmuSetup.210109.exe
-md5_arc=d2e28f3321695cdc0cfacbd994bfb55b
-md5_exe=6e6ae96a3282801c8d52bc6b1540145b
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210109.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210109.exe?use_mirror=autoselect
+version=210111
+location_arc=4905479,x010749D7,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuPack.210111.7z
+location_exe=7433840,x7DDB6ACB,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuSetup.210111.exe
+md5_arc=eb92adfbd7d7c38f344827a3eb00d7c3
+md5_exe=104fa474c62b85ab356f0e6cc7c751a1
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210111.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210111.exe?use_mirror=autoselect
