--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210111
-location_arc=4905479,x010749D7,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuPack.210111.7z
-location_exe=7433840,x7DDB6ACB,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuSetup.210111.exe
-md5_arc=eb92adfbd7d7c38f344827a3eb00d7c3
-md5_exe=104fa474c62b85ab356f0e6cc7c751a1
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210111.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210111.exe?use_mirror=autoselect
+version=210112
+location_arc=4911988,x9CB58200,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuPack.210112.7z
+location_exe=7436912,x5027A527,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuSetup.210112.exe
+md5_arc=a82b1d11b03b0a40dfded98dbc59eff5
+md5_exe=efd999a552e18b84db1c37c55b951c57
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210112.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210112.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210111
-location_arc=4905479,x010749D7,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuPack.210111.7z
-location_exe=7433840,x7DDB6ACB,https://github.com/Maximus5/ConEmu/releases/download/v21.01.11/ConEmuSetup.210111.exe
-md5_arc=eb92adfbd7d7c38f344827a3eb00d7c3
-md5_exe=104fa474c62b85ab356f0e6cc7c751a1
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210111.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210111.exe?use_mirror=autoselect
+version=210112
+location_arc=4911988,x9CB58200,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuPack.210112.7z
+location_exe=7436912,x5027A527,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuSetup.210112.exe
+md5_arc=a82b1d11b03b0a40dfded98dbc59eff5
+md5_exe=efd999a552e18b84db1c37c55b951c57
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210112.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210112.exe?use_mirror=autoselect
