ConEmu 210128 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210112
-location_arc=4911988,x9CB58200,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuPack.210112.7z
-location_exe=7436912,x5027A527,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuSetup.210112.exe
-md5_arc=a82b1d11b03b0a40dfded98dbc59eff5
-md5_exe=efd999a552e18b84db1c37c55b951c57
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210112.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210112.exe?use_mirror=autoselect
+version=210128
+location_arc=4924221,x7A2CB2E4,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuPack.210128.7z
+location_exe=7452784,x8EACF7AC,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuSetup.210128.exe
+md5_arc=3700a539b46b9ba2554881ab6271cfc5
+md5_exe=42fcd17bfb9d155cdd3d19738e704daa
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210128.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210128.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210112
-location_arc=4911988,x9CB58200,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuPack.210112.7z
-location_exe=7436912,x5027A527,https://github.com/Maximus5/ConEmu/releases/download/v21.01.12/ConEmuSetup.210112.exe
-md5_arc=a82b1d11b03b0a40dfded98dbc59eff5
-md5_exe=efd999a552e18b84db1c37c55b951c57
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210112.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210112.exe?use_mirror=autoselect
+version=210128
+location_arc=4924221,x7A2CB2E4,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuPack.210128.7z
+location_exe=7452784,x8EACF7AC,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuSetup.210128.exe
+md5_arc=3700a539b46b9ba2554881ab6271cfc5
+md5_exe=42fcd17bfb9d155cdd3d19738e704daa
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210128.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210128.exe?use_mirror=autoselect
