ConEmu 210202 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210128
-location_arc=4924221,x7A2CB2E4,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuPack.210128.7z
-location_exe=7452784,x8EACF7AC,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuSetup.210128.exe
-md5_arc=3700a539b46b9ba2554881ab6271cfc5
-md5_exe=42fcd17bfb9d155cdd3d19738e704daa
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210128.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210128.exe?use_mirror=autoselect
+version=210202
+location_arc=4926308,x8BAF1D5A,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuPack.210202.7z
+location_exe=7455856,xC068FEBB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuSetup.210202.exe
+md5_arc=433ff9fab4d4f2f4b048090c99c34763
+md5_exe=52a881cd6a5318cdb780bc485e75adf8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210202.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210202.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210128
-location_arc=4924221,x7A2CB2E4,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuPack.210128.7z
-location_exe=7452784,x8EACF7AC,https://github.com/Maximus5/ConEmu/releases/download/v21.01.28/ConEmuSetup.210128.exe
-md5_arc=3700a539b46b9ba2554881ab6271cfc5
-md5_exe=42fcd17bfb9d155cdd3d19738e704daa
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210128.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210128.exe?use_mirror=autoselect
+version=210202
+location_arc=4926308,x8BAF1D5A,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuPack.210202.7z
+location_exe=7455856,xC068FEBB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuSetup.210202.exe
+md5_arc=433ff9fab4d4f2f4b048090c99c34763
+md5_exe=52a881cd6a5318cdb780bc485e75adf8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210202.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210202.exe?use_mirror=autoselect
