--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210202
-location_arc=4926308,x8BAF1D5A,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuPack.210202.7z
-location_exe=7455856,xC068FEBB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuSetup.210202.exe
-md5_arc=433ff9fab4d4f2f4b048090c99c34763
-md5_exe=52a881cd6a5318cdb780bc485e75adf8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210202.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210202.exe?use_mirror=autoselect
+version=210206
+location_arc=4925724,xEF975DCB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuPack.210206.7z
+location_exe=7457904,x79F736D5,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuSetup.210206.exe
+md5_arc=2abaeda38da1813ef3b0893789bbc665
+md5_exe=a6308ba2a603c7d6c8a269a0008dc667
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210206.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210202
-location_arc=4926308,x8BAF1D5A,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuPack.210202.7z
-location_exe=7455856,xC068FEBB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.02/ConEmuSetup.210202.exe
-md5_arc=433ff9fab4d4f2f4b048090c99c34763
-md5_exe=52a881cd6a5318cdb780bc485e75adf8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210202.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210202.exe?use_mirror=autoselect
+version=210206
+location_arc=4925724,xEF975DCB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuPack.210206.7z
+location_exe=7457904,x79F736D5,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuSetup.210206.exe
+md5_arc=2abaeda38da1813ef3b0893789bbc665
+md5_exe=a6308ba2a603c7d6c8a269a0008dc667
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210206.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210206.exe?use_mirror=autoselect
