--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210206
-location_arc=4925724,xEF975DCB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuPack.210206.7z
-location_exe=7457904,x79F736D5,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuSetup.210206.exe
-md5_arc=2abaeda38da1813ef3b0893789bbc665
-md5_exe=a6308ba2a603c7d6c8a269a0008dc667
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210206.exe?use_mirror=autoselect
+version=210304
+location_arc=4945453,xEFF4D41E,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuPack.210304.7z
+location_exe=7474288,xB1BCAFC1,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuSetup.210304.exe
+md5_arc=f94b3bb39462a479d1092a9c0e0b7e8a
+md5_exe=a7dacad2373380ba069f5297749b177b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210304.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210304.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210206
-location_arc=4925724,xEF975DCB,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuPack.210206.7z
-location_exe=7457904,x79F736D5,https://github.com/Maximus5/ConEmu/releases/download/v21.02.06/ConEmuSetup.210206.exe
-md5_arc=2abaeda38da1813ef3b0893789bbc665
-md5_exe=a6308ba2a603c7d6c8a269a0008dc667
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210206.exe?use_mirror=autoselect
+version=210304
+location_arc=4945453,xEFF4D41E,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuPack.210304.7z
+location_exe=7474288,xB1BCAFC1,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuSetup.210304.exe
+md5_arc=f94b3bb39462a479d1092a9c0e0b7e8a
+md5_exe=a7dacad2373380ba069f5297749b177b
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210304.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210304.exe?use_mirror=autoselect
