ConEmu 210312 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210304
-location_arc=4945453,xEFF4D41E,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuPack.210304.7z
-location_exe=7474288,xB1BCAFC1,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuSetup.210304.exe
-md5_arc=f94b3bb39462a479d1092a9c0e0b7e8a
-md5_exe=a7dacad2373380ba069f5297749b177b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210304.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210304.exe?use_mirror=autoselect
+version=210312
+location_arc=4947881,xE64F9429,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuPack.210312.7z
+location_exe=7476848,x386D87D0,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuSetup.210312.exe
+md5_arc=96e505d54442981a8d8d01e01aba5820
+md5_exe=a39cf82d10b407dd4973a832e34a947c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210312.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210312.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210304
-location_arc=4945453,xEFF4D41E,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuPack.210304.7z
-location_exe=7474288,xB1BCAFC1,https://github.com/Maximus5/ConEmu/releases/download/v21.03.04/ConEmuSetup.210304.exe
-md5_arc=f94b3bb39462a479d1092a9c0e0b7e8a
-md5_exe=a7dacad2373380ba069f5297749b177b
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210304.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210304.exe?use_mirror=autoselect
+version=210312
+location_arc=4947881,xE64F9429,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuPack.210312.7z
+location_exe=7476848,x386D87D0,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuSetup.210312.exe
+md5_arc=96e505d54442981a8d8d01e01aba5820
+md5_exe=a39cf82d10b407dd4973a832e34a947c
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210312.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210312.exe?use_mirror=autoselect
