ConEmu 210314 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210312
-location_arc=4947881,xE64F9429,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuPack.210312.7z
-location_exe=7476848,x386D87D0,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuSetup.210312.exe
-md5_arc=96e505d54442981a8d8d01e01aba5820
-md5_exe=a39cf82d10b407dd4973a832e34a947c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210312.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210312.exe?use_mirror=autoselect
+version=210314
+location_arc=4946792,xEA360FAE,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuPack.210314.7z
+location_exe=7478896,xCC0393C7,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuSetup.210314.exe
+md5_arc=eb9fc8d7151f10736d022c4c56a1be7c
+md5_exe=43443af700d948eae11042f5b5e420c8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210314.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210314.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210312
-location_arc=4947881,xE64F9429,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuPack.210312.7z
-location_exe=7476848,x386D87D0,https://github.com/Maximus5/ConEmu/releases/download/v21.03.12/ConEmuSetup.210312.exe
-md5_arc=96e505d54442981a8d8d01e01aba5820
-md5_exe=a39cf82d10b407dd4973a832e34a947c
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210312.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210312.exe?use_mirror=autoselect
+version=210314
+location_arc=4946792,xEA360FAE,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuPack.210314.7z
+location_exe=7478896,xCC0393C7,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuSetup.210314.exe
+md5_arc=eb9fc8d7151f10736d022c4c56a1be7c
+md5_exe=43443af700d948eae11042f5b5e420c8
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210314.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210314.exe?use_mirror=autoselect
