--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210314
-location_arc=4946792,xEA360FAE,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuPack.210314.7z
-location_exe=7478896,xCC0393C7,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuSetup.210314.exe
-md5_arc=eb9fc8d7151f10736d022c4c56a1be7c
-md5_exe=43443af700d948eae11042f5b5e420c8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210314.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210314.exe?use_mirror=autoselect
+version=210422
+location_arc=4953262,xC79AA71C,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuPack.210422.7z
+location_exe=8082544,xA461FF02,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuSetup.210422.exe
+md5_arc=b960c299bbbcb785b569a1b0094d33e6
+md5_exe=8e4e72eefb4816d3fa4f4a2ca9be4ee0
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210314
-location_arc=4946792,xEA360FAE,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuPack.210314.7z
-location_exe=7478896,xCC0393C7,https://github.com/Maximus5/ConEmu/releases/download/v21.03.14/ConEmuSetup.210314.exe
-md5_arc=eb9fc8d7151f10736d022c4c56a1be7c
-md5_exe=43443af700d948eae11042f5b5e420c8
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210314.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210314.exe?use_mirror=autoselect
+version=210422
+location_arc=4953262,xC79AA71C,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuPack.210422.7z
+location_exe=8082544,xA461FF02,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuSetup.210422.exe
+md5_arc=b960c299bbbcb785b569a1b0094d33e6
+md5_exe=8e4e72eefb4816d3fa4f4a2ca9be4ee0
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
