--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210422
-location_arc=4953262,xC79AA71C,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuPack.210422.7z
-location_exe=8082544,xA461FF02,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuSetup.210422.exe
-md5_arc=b960c299bbbcb785b569a1b0094d33e6
-md5_exe=8e4e72eefb4816d3fa4f4a2ca9be4ee0
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
+version=210620
+location_arc=4898352,x94892467,https://github.com/Maximus5/ConEmu/releases/download/v21.06.20/ConEmuPack.210620.7z
+location_exe=8033256,xF602C799,https://github.com/Maximus5/ConEmu/releases/download/v21.06.20/ConEmuSetup.210620.exe
+md5_arc=e212db6e0cb8dd5f0e533a95e53b1ad5
+md5_exe=755c6cb3be91337dad93a00b1d7b0eb2
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210620.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210620.exe?use_mirror=autoselect
