ConEmu 210624 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210620
-location_arc=4898352,x94892467,https://github.com/Maximus5/ConEmu/releases/download/v21.06.20/ConEmuPack.210620.7z
-location_exe=8033256,xF602C799,https://github.com/Maximus5/ConEmu/releases/download/v21.06.20/ConEmuSetup.210620.exe
-md5_arc=e212db6e0cb8dd5f0e533a95e53b1ad5
-md5_exe=755c6cb3be91337dad93a00b1d7b0eb2
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210620.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210620.exe?use_mirror=autoselect
+version=210624
+location_arc=4897263,xB161D2EA,https://github.com/Maximus5/ConEmu/releases/download/v21.06.24/ConEmuPack.210624.7z
+location_exe=8036840,x828F6336,https://github.com/Maximus5/ConEmu/releases/download/v21.06.24/ConEmuSetup.210624.exe
+md5_arc=e32072ab28f5f10da077a9b8e78885ed
+md5_exe=24a71145033ee575158aad1834527d66
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210624.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210624.exe?use_mirror=autoselect
