Revert preview to 210422

--- a/version.ini
+++ b/version.ini
@@ -13,13 +13,13 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210627
-location_arc=4898830,x08B37AB4,https://github.com/Maximus5/ConEmu/releases/download/v21.06.27/ConEmuPack.210627.7z
-location_exe=8042984,xCD645309,https://github.com/Maximus5/ConEmu/releases/download/v21.06.27/ConEmuSetup.210627.exe
-md5_arc=15a4d2a8e1801c6802eb3d0027d23629
-md5_exe=7441107d657bd69a58c38f6b438c91e1
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210627.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210627.exe?use_mirror=autoselect
+version=210422
+location_arc=4953262,xC79AA71C,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuPack.210422.7z
+location_exe=8082544,xA461FF02,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuSetup.210422.exe
+md5_arc=b960c299bbbcb785b569a1b0094d33e6
+md5_exe=8e4e72eefb4816d3fa4f4a2ca9be4ee0
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
 version=210627
