ConEmu 210718 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210627
-location_arc=4898830,x08B37AB4,https://github.com/Maximus5/ConEmu/releases/download/v21.06.27/ConEmuPack.210627.7z
-location_exe=8042984,xCD645309,https://github.com/Maximus5/ConEmu/releases/download/v21.06.27/ConEmuSetup.210627.exe
-md5_arc=15a4d2a8e1801c6802eb3d0027d23629
-md5_exe=7441107d657bd69a58c38f6b438c91e1
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210627.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210627.exe?use_mirror=autoselect
+version=210718
+location_arc=4947634,x053B0204,https://github.com/Maximus5/ConEmu/releases/download/v21.07.18/ConEmuPack.210718.7z
+location_exe=8078824,x3DDE899D,https://github.com/Maximus5/ConEmu/releases/download/v21.07.18/ConEmuSetup.210718.exe
+md5_arc=2593f5c3f20e3473ca5ce7049dbfd29b
+md5_exe=593afba8b3f4f5529421f69ebee66ee2
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210718.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210718.exe?use_mirror=autoselect
