ConEmu 210816 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210422
-location_arc=4953262,xC79AA71C,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuPack.210422.7z
-location_exe=8082544,xA461FF02,https://github.com/Maximus5/ConEmu/releases/download/v21.04.22/ConEmuSetup.210422.exe
-md5_arc=b960c299bbbcb785b569a1b0094d33e6
-md5_exe=8e4e72eefb4816d3fa4f4a2ca9be4ee0
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210422.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210422.exe?use_mirror=autoselect
+version=210816
+location_arc=4945939,x73221BE8,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuPack.210816.7z
+location_exe=8082920,x9E1F7370,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuSetup.210816.exe
+md5_arc=7ca2e7bfd867ded1ac856770e7c58a08
+md5_exe=9896f5f78583f1ae3ed0bbfcafc8063e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210816.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210816.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210718
-location_arc=4947634,x053B0204,https://github.com/Maximus5/ConEmu/releases/download/v21.07.18/ConEmuPack.210718.7z
-location_exe=8078824,x3DDE899D,https://github.com/Maximus5/ConEmu/releases/download/v21.07.18/ConEmuSetup.210718.exe
-md5_arc=2593f5c3f20e3473ca5ce7049dbfd29b
-md5_exe=593afba8b3f4f5529421f69ebee66ee2
-mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.210718.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.210718.exe?use_mirror=autoselect
+version=210816
+location_arc=4945939,x73221BE8,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuPack.210816.7z
+location_exe=8082920,x9E1F7370,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuSetup.210816.exe
+md5_arc=7ca2e7bfd867ded1ac856770e7c58a08
+md5_exe=9896f5f78583f1ae3ed0bbfcafc8063e
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210816.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210816.exe?use_mirror=autoselect
