ConEmu 210822 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210816
-location_arc=4945939,x73221BE8,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuPack.210816.7z
-location_exe=8082920,x9E1F7370,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuSetup.210816.exe
-md5_arc=7ca2e7bfd867ded1ac856770e7c58a08
-md5_exe=9896f5f78583f1ae3ed0bbfcafc8063e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210816.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210816.exe?use_mirror=autoselect
+version=210822
+location_arc=4950003,xDF7B3199,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuPack.210822.7z
+location_exe=8080360,x55F724FC,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuSetup.210822.exe
+md5_arc=736c8bd9158b1eeb7e5bfdc746457106
+md5_exe=0893a994375331783e0f0e284c7a4e83
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210822.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210822.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210816
-location_arc=4945939,x73221BE8,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuPack.210816.7z
-location_exe=8082920,x9E1F7370,https://github.com/Maximus5/ConEmu/releases/download/v21.08.16/ConEmuSetup.210816.exe
-md5_arc=7ca2e7bfd867ded1ac856770e7c58a08
-md5_exe=9896f5f78583f1ae3ed0bbfcafc8063e
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210816.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210816.exe?use_mirror=autoselect
+version=210822
+location_arc=4950003,xDF7B3199,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuPack.210822.7z
+location_exe=8080360,x55F724FC,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuSetup.210822.exe
+md5_arc=736c8bd9158b1eeb7e5bfdc746457106
+md5_exe=0893a994375331783e0f0e284c7a4e83
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210822.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210822.exe?use_mirror=autoselect
