ConEmu 210905 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=161206
-location_arc=2834155,x9814CDE4,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuPack.161206.7z
-location_exe=5487408,x609D7B55,https://github.com/Maximus5/ConEmu/releases/download/v16.12.06/ConEmuSetup.161206.exe
-md5_arc=5d1da28d4f6dca12a2809f901eb25c04
-md5_exe=ad57900d0d5f2cc0d2564bcdfc997d1d
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.161206.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.161206.exe?use_mirror=autoselect
+version=210905
+location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
+location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
+md5_arc=a0244242eda61ba63957b4af3b2969bd
+md5_exe=30328ba665a5c18bd35041c083313817
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210822
-location_arc=4950003,xDF7B3199,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuPack.210822.7z
-location_exe=8080360,x55F724FC,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuSetup.210822.exe
-md5_arc=736c8bd9158b1eeb7e5bfdc746457106
-md5_exe=0893a994375331783e0f0e284c7a4e83
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210822.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210822.exe?use_mirror=autoselect
+version=210905
+location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
+location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
+md5_arc=a0244242eda61ba63957b4af3b2969bd
+md5_exe=30328ba665a5c18bd35041c083313817
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210822
-location_arc=4950003,xDF7B3199,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuPack.210822.7z
-location_exe=8080360,x55F724FC,https://github.com/Maximus5/ConEmu/releases/download/v21.08.22/ConEmuSetup.210822.exe
-md5_arc=736c8bd9158b1eeb7e5bfdc746457106
-md5_exe=0893a994375331783e0f0e284c7a4e83
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.210822.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.210822.exe?use_mirror=autoselect
+version=210905
+location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
+location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
+md5_arc=a0244242eda61ba63957b4af3b2969bd
+md5_exe=30328ba665a5c18bd35041c083313817
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
