ConEmu 210912 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -4,28 +4,28 @@
 ; http://downloads.sf.net/project/conemu/AutoUpdate/version.ini?use_mirror=autoselect
 
 [ConEmu_Stable_2]
-version=210905
-location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
-location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
-md5_arc=a0244242eda61ba63957b4af3b2969bd
-md5_exe=30328ba665a5c18bd35041c083313817
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
+version=210912
+location_arc=4947099,xFA3D5478,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuPack.210912.7z
+location_exe=8078824,x90D36720,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuSetup.210912.exe
+md5_arc=692411dce0cd8c3515c83bef2d30bdb3
+md5_exe=ef9c57ef9c4b569db2dcf4224f67476a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210905
-location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
-location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
-md5_arc=a0244242eda61ba63957b4af3b2969bd
-md5_exe=30328ba665a5c18bd35041c083313817
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
+version=210912
+location_arc=4947099,xFA3D5478,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuPack.210912.7z
+location_exe=8078824,x90D36720,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuSetup.210912.exe
+md5_arc=692411dce0cd8c3515c83bef2d30bdb3
+md5_exe=ef9c57ef9c4b569db2dcf4224f67476a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210905
-location_arc=4944590,x50467E2D,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuPack.210905.7z
-location_exe=8076264,x9A570484,https://github.com/Maximus5/ConEmu/releases/download/v21.09.05/ConEmuSetup.210905.exe
-md5_arc=a0244242eda61ba63957b4af3b2969bd
-md5_exe=30328ba665a5c18bd35041c083313817
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210905.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210905.exe?use_mirror=autoselect
+version=210912
+location_arc=4947099,xFA3D5478,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuPack.210912.7z
+location_exe=8078824,x90D36720,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuSetup.210912.exe
+md5_arc=692411dce0cd8c3515c83bef2d30bdb3
+md5_exe=ef9c57ef9c4b569db2dcf4224f67476a
+mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
