ConEmu 220308 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=210912
-location_arc=4947099,xFA3D5478,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuPack.210912.7z
-location_exe=8078824,x90D36720,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuSetup.210912.exe
-md5_arc=692411dce0cd8c3515c83bef2d30bdb3
-md5_exe=ef9c57ef9c4b569db2dcf4224f67476a
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
+version=220308
+location_arc=4858925,x40E91345,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuPack.220308.7z
+location_exe=7966696,x67D50E41,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuSetup.220308.exe
+md5_arc=1601f7c938f6e3fbaf107f509e0c2cbb
+md5_exe=3190f73dc7c899911469a6ae19fac60f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220308.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220308.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=210912
-location_arc=4947099,xFA3D5478,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuPack.210912.7z
-location_exe=8078824,x90D36720,https://github.com/Maximus5/ConEmu/releases/download/v21.09.12/ConEmuSetup.210912.exe
-md5_arc=692411dce0cd8c3515c83bef2d30bdb3
-md5_exe=ef9c57ef9c4b569db2dcf4224f67476a
-mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
+version=220308
+location_arc=4858925,x40E91345,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuPack.220308.7z
+location_exe=7966696,x67D50E41,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuSetup.220308.exe
+md5_arc=1601f7c938f6e3fbaf107f509e0c2cbb
+md5_exe=3190f73dc7c899911469a6ae19fac60f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220308.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220308.exe?use_mirror=autoselect
