ConEmu 220418 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -13,19 +13,19 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Stable/ConEmuPack.210912.7z?u
 mirror1_exe=http://downloads.sf.net/project/conemu/Stable/ConEmuSetup.210912.exe?use_mirror=autoselect
 
 [ConEmu_Preview_2]
-version=220308
-location_arc=4858925,x40E91345,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuPack.220308.7z
-location_exe=7966696,x67D50E41,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuSetup.220308.exe
-md5_arc=1601f7c938f6e3fbaf107f509e0c2cbb
-md5_exe=3190f73dc7c899911469a6ae19fac60f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220308.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220308.exe?use_mirror=autoselect
+version=220418
+location_arc=4859633,x6A9808C0,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuPack.220418.7z
+location_exe=7969256,xDF8C28C4,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuSetup.220418.exe
+md5_arc=e3aa1775c7ea57820be4c3e62ddcb2e7
+md5_exe=c46eee8d71e578d3ff38b843abbf1e7f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220418.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220418.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=220308
-location_arc=4858925,x40E91345,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuPack.220308.7z
-location_exe=7966696,x67D50E41,https://github.com/Maximus5/ConEmu/releases/download/v22.03.08/ConEmuSetup.220308.exe
-md5_arc=1601f7c938f6e3fbaf107f509e0c2cbb
-md5_exe=3190f73dc7c899911469a6ae19fac60f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220308.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220308.exe?use_mirror=autoselect
+version=220418
+location_arc=4859633,x6A9808C0,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuPack.220418.7z
+location_exe=7969256,xDF8C28C4,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuSetup.220418.exe
+md5_arc=e3aa1775c7ea57820be4c3e62ddcb2e7
+md5_exe=c46eee8d71e578d3ff38b843abbf1e7f
+mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220418.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220418.exe?use_mirror=autoselect
