ConEmu 220807 AutoUpdate information

--- a/version.ini
+++ b/version.ini
@@ -22,10 +22,10 @@ mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220418.7z?
 mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220418.exe?use_mirror=autoselect
 
 [ConEmu_Devel_2]
-version=220418
-location_arc=4859633,x6A9808C0,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuPack.220418.7z
-location_exe=7969256,xDF8C28C4,https://github.com/Maximus5/ConEmu/releases/download/v22.04.18/ConEmuSetup.220418.exe
-md5_arc=e3aa1775c7ea57820be4c3e62ddcb2e7
-md5_exe=c46eee8d71e578d3ff38b843abbf1e7f
-mirror1_arc=http://downloads.sf.net/project/conemu/Preview/ConEmuPack.220418.7z?use_mirror=autoselect
-mirror1_exe=http://downloads.sf.net/project/conemu/Preview/ConEmuSetup.220418.exe?use_mirror=autoselect
+version=220807
+location_arc=4861104,x6599AF2F,https://github.com/Maximus5/ConEmu/releases/download/v22.08.07/ConEmuPack.220807.7z
+location_exe=7969624,x1EDBCF97,https://github.com/Maximus5/ConEmu/releases/download/v22.08.07/ConEmuSetup.220807.exe
+md5_arc=46e39997e22b0763fe6ab9fe7d677b33
+md5_exe=d6020b5e5ce43b94d24e8a299041bd68
+mirror1_arc=http://downloads.sf.net/project/conemu/Alpha/ConEmuPack.220807.7z?use_mirror=autoselect
+mirror1_exe=http://downloads.sf.net/project/conemu/Alpha/ConEmuSetup.220807.exe?use_mirror=autoselect
